@@ -6,86 +6,79 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Predicate;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 /**
- * Manages a concurrent worker pool that processes {@link RepairOperation}s with
- * debounced, last-writer-wins compaction.
+ * Manages a pool of virtual-thread workers that process {@link RepairOperation}s
+ * with debounced, last-writer-wins compaction.
  *
  * <p>When the same key is enqueued multiple times before execution, only the
- * most recent operation is retained. A short delay between enqueue and execution
- * lets rapid sequential updates compact and gives in-progress writes time to
- * finish before a repair is attempted.
+ * operation with the highest {@link RepairOperation#seqOffset()} is retained.
+ * An incoming operation whose seqOffset is less than or equal to the pending
+ * operation's seqOffset is silently discarded (at-least-once idempotency).
+ *
+ * <p>A short delay between enqueue and execution lets rapid sequential updates
+ * compact and gives in-progress writes time to finish before a repair fires.
  */
 public class RepairWorkerPool {
 
     private static final Logger logger = LogManager.getLogger(RepairWorkerPool.class);
 
-    public static final int DEFAULT_CONCURRENCY = 4;
     static final long REPAIR_DELAY_MS = 2_000;
 
     private final ConcurrentHashMap<String, RepairOperation> pendingOperations = new ConcurrentHashMap<>();
     private final ConcurrentHashMap<String, ScheduledFuture<?>> scheduledFutures = new ConcurrentHashMap<>();
-    private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
-        Thread t = new Thread(r, "repair-scheduler");
-        t.setDaemon(true);
-        return t;
-    });
-    private final ExecutorService workerPool;
-    private final Predicate<String> activeWriteCheck;
+    private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor(
+            Thread.ofVirtual().name("repair-scheduler").factory());
+    private final ExecutorService workerPool = Executors.newVirtualThreadPerTaskExecutor();
+    private final WriteTracker writeTracker;
     private final long repairDelayMs;
-    private final int concurrency;
     private volatile boolean running;
 
-    public RepairWorkerPool() {
-        this(DEFAULT_CONCURRENCY, key -> false, REPAIR_DELAY_MS);
-    }
-
-    public RepairWorkerPool(int concurrency) {
-        this(concurrency, key -> false, REPAIR_DELAY_MS);
-    }
-
-    public RepairWorkerPool(int concurrency, Predicate<String> activeWriteCheck) {
-        this(concurrency, activeWriteCheck, REPAIR_DELAY_MS);
+    public RepairWorkerPool(WriteTracker writeTracker) {
+        this(writeTracker, REPAIR_DELAY_MS);
     }
 
     /** Package-private constructor for tests that need a shorter dispatch delay. */
-    RepairWorkerPool(int concurrency, Predicate<String> activeWriteCheck, long repairDelayMs) {
-        if (concurrency <= 0) {
-            throw new IllegalArgumentException("concurrency must be positive, got: " + concurrency);
-        }
-        this.concurrency = concurrency;
-        this.activeWriteCheck = activeWriteCheck;
+    RepairWorkerPool(WriteTracker writeTracker, long repairDelayMs) {
+        this.writeTracker = writeTracker;
         this.repairDelayMs = repairDelayMs;
-        this.workerPool = Executors.newFixedThreadPool(concurrency, r -> {
-            Thread t = new Thread(r);
-            t.setName("repair-worker-" + t.threadId());
-            t.setDaemon(true);
-            return t;
-        });
         this.running = false;
     }
 
     /**
      * Enqueues a repair operation with debounced, last-writer-wins compaction.
-     * If a pending repair exists for the same key, it is overwritten and its
-     * scheduled execution is replaced.
+     *
+     * <p>If a pending repair already exists for the same key with an equal or higher
+     * seqOffset, the incoming operation is discarded. If the incoming seqOffset is
+     * strictly higher, the pending operation is replaced and the scheduled execution
+     * is reset.
      */
     public void enqueue(RepairOperation operation) {
         if (operation == null) {
             return;
         }
         String key = operation.blobKey();
-        pendingOperations.put(key, operation);
+
+        RepairOperation winner = pendingOperations.merge(key, operation, (existing, incoming) ->
+                incoming.seqOffset() > existing.seqOffset() ? incoming : existing);
+
+        if (winner != operation) {
+            // Existing operation has equal or higher seqOffset — discard incoming
+            logger.debug("Discarding stale repair: key={}, incoming={}, existing={}",
+                    key, operation.seqOffset(), winner.seqOffset());
+            return;
+        }
+
+        // Incoming won — cancel the previously scheduled future (if any) and reschedule
         ScheduledFuture<?> old = scheduledFutures.put(key,
                 scheduler.schedule(() -> dispatchRepair(key), repairDelayMs, TimeUnit.MILLISECONDS));
         if (old != null) {
             old.cancel(false);
         }
-        logger.debug("Enqueued repair operation: key={}, reason={}", key, operation.reason());
+        logger.debug("Enqueued repair: key={}, reason={}, seqOffset={}", key, operation.reason(), operation.seqOffset());
     }
 
     /**
@@ -96,7 +89,7 @@ public class RepairWorkerPool {
             throw new IllegalStateException("RepairWorkerPool is already running");
         }
         running = true;
-        logger.info("Starting RepairWorkerPool with {} workers", concurrency);
+        logger.info("RepairWorkerPool started (virtual-thread workers)");
     }
 
     /**
@@ -138,8 +131,8 @@ public class RepairWorkerPool {
         if (op == null) {
             return;
         }
-        if (activeWriteCheck.test(key)) {
-            // A write is in progress — re-enqueue so it retries after the blob lands
+        if (writeTracker.isActive(key)) {
+            // Write in progress — re-enqueue so it retries after the blob lands
             logger.debug("Deferring repair for key={}: write in progress", key);
             enqueue(op);
             return;
@@ -164,6 +157,7 @@ public class RepairWorkerPool {
         //  1. Fetch enough shards from peer nodes to reconstruct
         //  2. Run erasure decoding
         //  3. Write the reconstructed blob to local disk
-        logger.info("Executing repair operation (stub): key={}, reason={}", operation.blobKey(), operation.reason());
+        logger.info("Executing repair (stub): key={}, reason={}, seqOffset={}",
+                operation.blobKey(), operation.reason(), operation.seqOffset());
     }
 }
